--- a/views/test.html
+++ b/views/test.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+
+        });
+    </script>
 </head>
 <body>
 <h1>{{.Title}}</h1>
+<h2>{{.user.Name}}</h2>
 </body>
 </html>
