--- a/views/test.html
+++ b/views/test.html
@@ -22,6 +22,10 @@
         }
     </style>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../swf/fileprogress.js"></script>
+    <script type="text/javascript" src="../swf/handlers.js"></script>
+    <script type="text/javascript" src="../swf/swfupload.js"></script>
+    <script type="text/javascript" src="../swf/swfupload.queue.js"></script>
     <script type="text/javascript">
         function subForm() {
             var name = $('#name').val();
@@ -71,5 +75,74 @@
         <td colspan="2"><button id="btn" onclick="subForm()">提交</button></td>
     </tr>
 </table>
+
+<span style="width: auto; height: auto;">
+    <div class="progress " id="upload_progresse" div-css="10" style="width:150px;position: absolute;display:none;">
+        <div id="upload_progress_bge"  style="background: #8BABCE;width: 20%; height: 20px; margin-top: 35px; margin-left: -10px;"></div>
+    </div>
+    <!-- 进度条结束 -->
+    <span class="xmbta3a1a"><img src="../swf/images/alum_def_img.jpg" id="img" width="113" height="113" alt="进度条结束"/></span>
+    <span class="xmbta3a1b">
+        <a href="javascript:void(0)" id="upload_images"></a>
+    </span>
+</span>
+<script type="text/javascript">
+    jQuery(document).ready(function(){
+        var upload = new SWFUpload({
+            upload_url: "/file_upload", //后台处理路径
+            flash_url : "../../swf/swf/swfupload.swf",  //flash加载路径
+            file_size_limit : "10 MB", //文件大小限制
+            file_upload_limit : "0",  //允许上传文件的数量,0为无限制
+            file_queue_limit : "0",   //上传队列允许等待文件的数量
+            file_types : "*.jpg;*.png;*.jpeg;", //文件类型
+            file_types_description : "Image Files", //文件类型说明
+            file_post_name: 'file', //文件名称,默认为Filedata，Linux下只能用默认名称
+            file_dialog_start_handler : fileDialogStart,
+            file_queued_handler : fileQueued,
+            file_queue_error_handler : fileQueueError, //出错时执行的函数
+            file_dialog_complete_handler : function(numFilesSelected, numFilesQueued){
+                if(numFilesSelected>1){
+                    alert("只能选择一张图片");
+                }else{
+                    this.startUpload();
+                }
+            },
+            upload_start_handler : uploadStart,
+            upload_error_handler : uploadError,
+
+            //处理进度条
+            upload_progress_handler : function (file, bytesLoaded, bytesTotal){
+                var percent = Math.ceil((bytesLoaded / bytesTotal) * 100);
+                $('#upload_progresse').show();
+                $('#upload_progress_bge').css({'width': percent + '%'});
+                $('#upload_progress_bge').html("<font color='#FFFFFF'>"+ percent + '%'+"</font>");
+            },
+
+            //清空进度条
+            upload_complete_handler : function (file){
+                this.startUpload();
+                $('#upload_progress_bge').css({'width': '0%'});
+                $('#upload_progress_bge').html('');
+                $('#upload_progress_bge').css('display', 'none');
+            },
+
+            //上传成功回调函数
+            upload_success_handler : function(file, result){
+                var obj = JSON.parse(result);
+                jQuery("#img").attr("src", obj.path);
+            },
+
+            //关于按钮的一些属性设置
+            button_placeholder_id : "upload_images", //绑定按钮的id
+            button_text:"上传手机图片",
+            button_text_style : ".redText { cursor: pointer;color: #333333; font-weight: bold; }",
+            button_width: 80,
+            button_height: 20,
+            button_cursor: SWFUpload.CURSOR.HAND, //鼠标样式
+            button_action:SWFUpload.BUTTON_ACTION.SELECT_FILE, //单文件上传
+            button_image_url:'../swf/images/anniu.jpg'
+        });
+    });
+</script>
 </body>
 </html>
