--- a/views/test.html
+++ b/views/test.html
@@ -89,7 +89,7 @@
 <script type="text/javascript">
     jQuery(document).ready(function(){
         var upload = new SWFUpload({
-            upload_url: "/file_upload", //后台处理路径
+            upload_url: "/service/upload", //后台处理路径
             flash_url : "../../swf/swf/swfupload.swf",  //flash加载路径
             file_size_limit : "10 MB", //文件大小限制
             file_upload_limit : "0",  //允许上传文件的数量,0为无限制
